# Macros

./: .gitignore  CMakeLists.txt  release.sh  run.sh
src/: HColorInspector.cpp  HImage.cpp  HInputSim.cpp  HTextWriter.cpp  main.cpp
src/libs/: base64.cpp
